force-app/src/objects/APXTConga4__Document_History_Detail__c.object
<CustomObject>
    <fields>
        <fullName>APXTConga4__Document_History__c</fullName>
        <label>Document History</label>
        <referenceTo>APXTConga4__Document_History__c</referenceTo>
        <relationshipLabel>Document History Details</relationshipLabel>
        <relationshipName>Document_History_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Document_Status__c</fullName>
        <label>Document Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generated</fullName>
                    <default>true</default>
                    <label>Generated</label>
                </value>
                <value>
                    <fullName>Viewed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APXTConga4__Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Last_Viewed__c</fullName>
        <label>Last Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Number_of_Views__c</fullName>
        <label>Number of Views</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXTConga4__SMS_Number__c</fullName>
        <label>SMS Number</label>
        <type>Phone</type>
    </fields>
    <label>Document History Detail</label>
    <nameField>
        <displayFormat>DHD-{0000}</displayFormat>
        <label>Document History Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document History Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>